syntax = "proto3";

package auth.v1;

import "type/v1/enums.proto";

service AuthService {
  rpc login(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshRequest) returns (TokenResponse);
  rpc ValidateToken(ValidateRequest) returns (ValidateResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
  types.v1.TokenType token_type = 3;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  string token_type = 4;
}

message RefreshRequest {
  string refresh_token = 1;
}

message TokenResponse {
  string access_token = 1;
  int64 expires_in = 2;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  bool valid = 1;
  string subject = 2;
  repeated string roles = 3;
  repeated string permissions = 4;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}
